--- a/Demos/Rprof-time-evolution.ipynb
+++ b/Demos/Rprof-time-evolution.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "# Plot time evolution\n",
     "\n",
-    "In this notebook we make time evolution plots at a give radius or radius range of quantities from radial profiles. \n"
+    "In this notebook we make time evolution plots at a given d radius or radius range of quantities from radial profiles. \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* `ppmstarhub version: 1.2.6` or niagara hub sciconda-astrohub2 kernel\n",
+    "* `ppmstarhub version: 2.0.0` or niagara hub sciconda-astrohub2 kernel\n",
     "* Parent of this notebook: `ppmstar/projects/H-core-M25/analysis_paper_gas/Hcore-time-evolution-M100+.ipynb` and `Hcore-time-evolution-paperI.ipynb`\n",
     "* Name of this notebook: `Rprof-time-evolution.ipynb`\n",
     "* home of this notebook: https://github.com/PPMstar/PPMnotebooks/tree/master/Demos"
@@ -30,10 +30,14 @@
     "from nugridpy import utils as ut\n",
     "from scipy import interpolate\n",
     "import sys\n",
-    "# for testing use ppm.py from \"demos\" branch\n",
-    "sys.path.insert(0,'/Users/fherwig/Repos/PyPPM')\n",
     "\n",
-    "# sys.path.insert(0,'/user/scratch14_ppmstar-lcse/fherwig/PyPPM')\n",
+    "\n",
+    "scratch_dir = '/scratch/f/fherwig/fherwig/'\n",
+    "# scratch_dir = '/user/niagara_scratch_fherwig/'\n",
+    "ppmpy_dir = scratch_dir+'repos/PyPPM'\n",
+    "sys.path.insert(0,ppmpy_dir)\n",
+    "\n",
+    "\n",
     "from ppmpy import ppm  \n",
     "logging.getLogger(\"matplotlib\").setLevel(logging.ERROR)\n"
    ]
@@ -63,33 +67,16 @@
    "outputs": [],
    "source": [
     "dothis = True\n",
-    "dothis = False\n",
-    "if dothis is True:\n",
-    "    nominal_heat = 0.00003355\n",
-    "    eos = 'g'\n",
-    "    # dir_runs = '/user/niagara_scratch_fherwig/' # execution on ppmstar.org\n",
-    "    dir_runs = '/scratch/f/fherwig/fherwig/'    # execution on niagara jupyterlab\n",
-    "    runs = ['M109','M108','M107','M114','M115',\\\n",
-    "              'M106','M105','M116','M110','M117']\n",
-    "    data = ppm.initialize(data,dir, runs, nominal_heat=nominal_heat,\\\n",
-    "                      eos=eos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dothis = True\n",
     "# dothis = False\n",
     "if dothis is True:\n",
     "    nominal_heat = 0.00003355\n",
     "    eos = 'g'\n",
-    "    dir_runs = '/Users/fherwig/Globus/'    # some data on FH ~/Globus for testing\n",
-    "    runs = ['M239']\n",
-    "    data = ppm.initialize_cases(data, dir_runs, runs, nominal_heat=nominal_heat,\\\n",
-    "                      eos=eos)"
+    "    \n",
+    "    cases = ['M109','M108','M107','M114','M115',\\\n",
+    "              'M106','M105','M116','M110','M117','M111']\n",
+    "    \n",
+    "    data = ppm.initialize_cases(data,scratch_dir, cases, nominal_heat=nominal_heat,\\\n",
+    "                      eos=eos,verbose = 3)"
    ]
   },
   {
@@ -105,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_cases = list(data.keys())\n",
+    "all_cases = ppm.cases_table(data)\n",
     "cases = all_cases "
    ]
   },
@@ -204,8 +191,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "runs = ['M107', 'M114', 'M115']\n",
-    "runs = ['M239']"
+    "runs = ['M107', 'M114', 'M115','M111']\n",
+    "# runs = ['M239']"
    ]
   },
   {
@@ -214,11 +201,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var_means_dict = ppm.time_evol_r_Hp_vars(data, runs, varss  = ['|Ut|'], f_hps = [-1.0,1.0], key = \"Demo\", fname = '-Ut', logy = False,\\\n",
+    "# ppm.time_evol_r_Hp_vars?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var_means_dict = ppm.time_evol_r_Hp_vars(data, runs, varss  = ['|Ur|'], f_hps = [1.0], key = \"Demo\", fname = '-Ut', logy = False,\\\n",
     "                        ylab=\"$ U_\\mathrm{t} / \\mathrm{[km/s]}$\",  xlims=(None,None),\\\n",
-    "                        ylims=(None,None), legends=0, NDump_range = None, NDump_range_vals = (500,1000),\\\n",
+    "                        ylims=(None,None), legends=0, NDump_range = 'time', NDump_range_vals = (150,4000),\\\n",
     "                        mrange_interp = (12.,14.,0.0001), sparse = 10,\\\n",
-    "                        t_transient_hr = 500, figsizes = (8,5), ifig=1394, warning=False)"
+    "                        t_transient_hr = 500, figsizes = (8,4), ifig=1394)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pwd"
    ]
   },
   {
@@ -267,9 +272,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "scinet-conda /project/f/fherwig/fherwig/PythonVirtual/sciconda-astrohub2",
    "language": "python",
-   "name": "python3"
+   "name": "scinet_conda_project_f_fherwig_fherwig_pythonvirtual_sciconda_astrohub2"
   },
   "language_info": {
    "codemirror_mode": {
